# python-rtmidi

./: .appveyor.yml  .buildinfo  .coverage  .flake8  .gitignore  .gitmodules  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  INSTALL-windows.md  INSTALL-windows.rst  INSTALL-windows.txt  INSTALL.md  INSTALL.rst  INSTALL.rst.in  LICENSE.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  README.txt  authors.html  classes.html  contributing.html  deploy.sh  ez_setup.py  fill_template.py  genindex.html  history.html  index.html  install-windows.html  installation.html  license.html  meson.build  meson_options.txt  meson_postinstall.py  modules.html  (+17 more)
.cache/v/cache/: lastfailed
.eggs/pbr-3.0.0-py3.6.egg/EGG-INFO/: PKG-INFO  SOURCES.txt
.eggs/pbr-3.0.0-py3.6.egg/pbr/: builddoc.py  git.py
.eggs/py-1.4.33-py3.6.egg/EGG-INFO/: PKG-INFO  SOURCES.txt
.eggs/py-1.4.33-py3.6.egg/py/: __init__.py
.eggs/py-1.4.33-py3.6.egg/py/_code/: code.py
.eggs/py-1.4.33-py3.6.egg/py/_path/: common.py  local.py
.eggs/pytest-3.0.7-py3.6.egg/EGG-INFO/: PKG-INFO  SOURCES.txt
.github/workflows/: development.yml  main.yml  pr_to_master.yml  production.yml  publish-to-test-pypi.yml  push_to_feat.yml  push_to_master.yml  release.yml  tests.yml  wheels.yml
.pytest_cache/v/cache/: nodeids
_modules/: index.html
_modules/rtmidi/: midiconstants.html  midiutil.html
_sources/: classes.rst.txt  contributing.rst.txt  index.rst.txt  rtmidi.rst.txt  rtmidi.txt  usage.rst.txt
_static/: documentation_options.js
ci/: travis-deploy.sh  travis-install.sh
docs/: api.rst.inc  classes.rst  conf.py  contributing.rst  index.rst  install-windows.md  install-windows.rst  license.md  modules.rst  rtmidi.rst  usage.rst
examples/: manufacturers.py  midiconstants.py  midifilter.py  osc2midi.py  sendsysex.py  sysexsaver.py  wavetablemodstep.py
examples/advanced/: ccstore.py  midiclock.py  midioutwrapper.py  midiwrapper.py  recvrpn.py  send_all.py
examples/basic/: contextmanager.py  midiin_callback  midiin_callback.py  midiin_poll.py  midiout.py  noteon2osc.py  panic.py  probe_ports.py
examples/drumseq/: README.rst  drumseq.py  example_02.txt  example_04.txt  example_05.txt  example_08.txt  example_10.txt  example_12.txt  funkydrummer.txt  rosanna-shuffle.txt  template.txt
examples/joystick/: joystick2midi.py
examples/midi2command/: README.rst  README.txt  example.cfg  midi2command.py
examples/midifilter/: __main__.py  filters.py
examples/osc2midi/: 9-ch-Mixer.yaml  Mix16.yaml  device.py  main.py  midievents.py  midiio.py  oscdispatcher.py
examples/sequencer/: sequencer.py
examples/sysex/: send_sysex.py  send_sysex_file.py  sendsysex.py
examples/sysexsaver/: __main__.py  main.py  manufacturers.py  models.py
projects/Bookmarker/trunk/: MANIFEST.in  README.in  dev.cfg  sample-prod.cfg  setup.py  start-bookmarker.py
projects/Bookmarker/trunk/bookmarker/: controllers.py  model.py  release.py
projects/Bookmarker/trunk/data/: bootstrap.sql  devdata.sqlite
projects/Bookmarker/trunk/doc/: FIRSTSTEPS.txt  rest.css  restcontroller-example.py
projects/Bookmarker/trunk/tools/: make_release.sh
projects/CBlog/tags/release-0.1a/: MANIFEST.in  README.in  cblog-start  dev.cfg  prod.cfg  run  setup.py
projects/CBlog/trunk/: MANIFEST.in  README.in  dev.cfg  setup.py
projects/CBlog/trunk/cblog/: cachecontrol.py  fflash.py  model.py  release.py
projects/CBlog/trunk/data/: bootstrap.sql
projects/CBlog/trunk/doc/: API.txt  BUGS.txt  IDEAS.txt  NginxIntegration.txt  TODO.txt
projects/CBlog/trunk/log/: README.txt
projects/CBlog/trunk/misc/: nginx.conf  supervisor2.init
projects/CBlog/trunk/tools/: cheetah-autocompile.py  deploy-production.py  deploy-testing.py  make_release.sh
projects/EggBasket/tags/0.1a/: dev.cfg  setup.cfg  setup.py  start-eggbasket.py  test.cfg
projects/EggBasket/tags/0.2a/: CHANGELOG.txt  MANIFEST.in  README.in  default.cfg  setup.py
projects/EggBasket/tags/0.3a/: CHANGELOG.txt  default.cfg  dev.cfg  start-eggbasket.py
projects/EggBasket/tags/0.4a/: CHANGELOG.txt  dev.cfg
projects/EggBasket/tags/0.5a/: CHANGELOG.txt
projects/EggBasket/tags/0.6b/: CHANGELOG.txt  README.in  setup.py
projects/EggBasket/trunk/: CHANGELOG.txt  default.cfg  eggbasket.kpf  sample-dev.cfg
projects/EggBasket/trunk/eggbasket/: model.py  permissions.py  release.py  util.py  validators.py
projects/EggBasket/trunk/tools/: upload_package.py
projects/FancyFlashExample/trunk/: MANIFEST.in  README.txt  default.cfg  dev.cfg  make_release.sh  setup.py  start-fflashex.py  test.cfg  upload.sh
projects/FancyFlashExample/trunk/fflashex/: commands.py  release.py
projects/Imap2Feed/trunk/: README.in  default.cfg  dev.cfg  imap2feed-start.py  setup.py
projects/Imap2Feed/trunk/Imap2Feed.egg-info/: sqlobject.txt  top_level.txt
projects/TGFirebugLite/trunk/: MANIFEST.in  README.in  setup.py
projects/TurboFancyFlash/trunk/: MANIFEST.in  make_readme.py  make_release.sh  setup.py  upload.sh
projects/confutils/trunk/: winpaths.py
projects/flashutils/trunk/: flashpublish.py
projects/python-rtmidi/trunk/: CHANGELOG.rst  INSTALL-windows.rst  INSTALL-windows.txt  INSTALL.rst  INSTALL.rst.in  LICENSE.txt  MANIFEST.in  README.txt  fill_template.py  setup.py
projects/threadpool/trunk/: MANIFEST.in  NEWS.txt  README.txt  TODO.txt  dist.sh  setup.cfg  setup.py  upload.sh
rtmidi/: __init__.py  meson.build  midiconstants.py  midiutil.py  release.py  version.py  version.py.in
src/: RtMidi.cpp  RtMidi.h  _rtmidi.pyx  meson.build  meson_dist_cython.py  py_init.h  pyinit.h  rtmidi.pyx
tests/: test_basic.py  test_ci_wheels.py  test_delete.py  test_errorcallback.py  test_errors.py  test_midiin_callback.py  test_midiin_poll.py  test_midiout.py  test_oscdispatcher.py  test_probe_ports.py  test_rtmidi.py
wheelhouse/: python_rtmidi-1.5.0rc1-cp310-cp310-manylinux_2_28_x86_64.whl  python_rtmidi-1.5.0rc1-cp311-cp311-manylinux_2_28_x86_64.whl  python_rtmidi-1.5.0rc1-cp38-cp38-manylinux_2_28_x86_64.whl  python_rtmidi-1.5.0rc1-cp39-cp39-manylinux_2_28_x86_64.whl
(+320 files in other folders)
