[egg_info]
tag_build = .dev
#tag_date = true
#tag_svn_revision = true


[aliases]
# A handy alias to build a release (source and egg)
release = build filltmpl egg_info -Db "" sdist --formats=zip,gztar bdist_wheel


[filltmpl]
templates = INSTALL.rst.in


[build_sphinx]
source-dir = docs/
build-dir  = docs/build
all_files  = 1


[upload_sphinx]
upload-dir = docs/build/html


[flake8]
ignore = E116, E265, E266, E731, W504
max-line-length = 100
exclude = examples/osc2midi/lru_cache.py


[pydocstyle]
match = (?!test_).*\.pyx?
match_dir = (src|rtmidi)


[metadata]
name = python-rtmidi
description = A Python binding for the RtMidi C++ library implemented using Cython.
author = Christopher Arndt
author_email = chris@chrisarndt.de
license = MIT License
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/SpotlightKid/python-rtmidi
download_url = https://pypi.python.org/pypi/python-rtmidi
repository = https://github.com/SpotlightKid/python-rtmidi.git
keywords =
    midi
    music
    rtmidi
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: MacOS X
    Environment :: Win32 (MS Windows)
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Sound/Audio :: MIDI
    Topic :: Software Development :: Libraries :: Python Modules


[options]
zip_safe = False
include_package_data = True
